[package]
name = "umm"
version = "0.1.0"
authors = ["Kevin Glasson <kevin.glasson@curtin.edu.au>"]
description = "umm is a tiny task runner."
edition = "2018"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
